opT estH communication noise system illustration

--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -409,6 +409,7 @@ and topological spaces.
   \citerpp{moon2000}{105}{106}
   }
 \label{thm:prb_vspace}
+\label{thm:pEinprod}
 %---------------------------------------
 Let $R$ be a ring,
 $\ps$ be a \structe{probability space}, $\pE$ the expectation operator, and
